# process-scheduler

./: .gitignore  CMakeLists.txt  main.c
include/: process.h  queue.h  rr.h  scheduler.h  tools.h
src/: process.c  queue.c  rr.c  scheduler.c  tools.c
